Fixed layout bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -364,3 +364,28 @@ horarios{
       margin: 0 auto;
   }
 }
+
+@media (max-width: 320px) { 
+  
+  .container-avisos{
+    margin-top: -25px;
+    margin-bottom: 180px;
+  }
+
+  .img-size{
+    /*  padding: 0;
+        margin: 0; */
+        height: 272px;
+        width: 200px;
+        background-size: contain;
+  background-repeat: no-repeat;
+        
+    }
+
+    .modal-content {
+      width: 220px;
+      height: 300px;
+      background-color: #082349 !important;
+      margin: 0 auto;
+  }
+}
